# ros-tensorrt-bridge

./: .gitignore  .gitmodules  README.md  tracker_compute.py
docker/: docker-compose-aarch64.yml  docker-compose-amd64.yml  dockerfile-aarch64  dockerfile-amd64
src/ros_tensorrt_bridge/: CMakeLists.txt  package.xml
src/ros_tensorrt_bridge/include/ros_tensorrt_bridge/: assert.hpp  config.hpp  model_builder.hpp  ros_tensorrt_bridge.hpp  tensorrt_bridge.hpp  tracker_bind.hpp  utils.hpp
src/ros_tensorrt_bridge/include/ros_tensorrt_bridge/kernels/: deviceInfo.hpp
src/ros_tensorrt_bridge/include/ros_tensorrt_bridge/scratch/: model_builder.hpp
src/ros_tensorrt_bridge/include/ros_tensorrt_bridge/tracker/: trackerlib.hpp
src/ros_tensorrt_bridge/include/ros_tensorrt_bridge/yolo_scratch/: block.hpp  logging.hpp  model.hpp  model_generator.hpp  types.h
src/ros_tensorrt_bridge/include/ros_tensorrt_bridge/yolo_scratch/plugin/: yololayer.hpp
src/ros_tensorrt_bridge/src/: main.cpp  main_test.cpp  ros_tensorrt_bridge.cpp  tensorrt_bridge.cpp
src/ros_tensorrt_bridge/src/kernels/: deviceInfo.cpp
src/ros_tensorrt_bridge/src/scratch/: model_builder.cpp
src/ros_tensorrt_bridge/src/tracker/: tracker_bind.cpp  trackerlib.cpp
src/ros_tensorrt_bridge/src/yolo_scratch/: block.cpp  model.cpp  model_generator.cpp
src/ros_tensorrt_bridge/src/yolo_scratch/plugin/: yololayer.cu
src/ros_tensorrt_bridge_test/: CMakeLists.txt  package.xml
src/ros_tensorrt_bridge_test/src/: main_test.cpp
trackers/: human_detection.py  tracker_test.py
trackers/pybind_test/: CMakeLists.txt  convert_module.py  detections.cpp  main.cpp
